--- a/openlane/user_project_wrapper/config.json
+++ b/openlane/user_project_wrapper/config.json
@@ -7,8 +7,8 @@
     "DESIGN_NAME"                     : "user_project_wrapper",
     "DIE_AREA"                        : "0 0 2920 3520",
     "DIODE_INSERTION_STRATEGY"        : "0",
-    "EXTRA_GDS_FILES"                 : "../../gds/user_proj_example.gds",
-    "EXTRA_LEFS"                      : "../../lef/user_proj_example.lef",
+    "EXTRA_GDS_FILES"                 : "../../gds/user_project.gds",
+    "EXTRA_LEFS"                      : "../../lef/user_project.lef",
     "FILL_INSERTION"                  : "0",
     "FP_IO_HEXTEND"                   : "4.8",
     "FP_IO_HLENGTH"                   : "2.4",
@@ -51,6 +51,6 @@
     "TAP_DECAP_INSERTION"             : "0",
     "VDD_NETS"                        : "vccd1 vccd2 vdda1 vdda2",
     "VERILOG_FILES"                   : ["../../caravel/verilog/rtl/defines.v","../../verilog/rtl/user_project_wrapper.v"],  
-    "VERILOG_FILES_BLACKBOX"          : ["../../caravel/verilog/rtl/defines.v","../../verilog/rtl/user_proj_example.v"]  
+    "VERILOG_FILES_BLACKBOX"          : ["../../caravel/verilog/rtl/defines.v","../../verilog/rtl/user_project.v"]  
 }
 
